...
    return Column(
      children: [
        AuthIconTextField(
          controller: _emailController,
          type: IconTextFieldType.email,
          focusNode: _emailFocusNode,
          hintText: 'Enter Email',
          isTextFieldFocused: _emailFocusNode.hasFocus,
          onTap: () => setState(() => _emailFocusNode.requestFocus()),
        ),
        const Gap(20.0),
        AuthIconTextField(
          controller: _passwordController,
          type: IconTextFieldType.password,
          focusNode: _passwordFocusNode,
          hintText: 'Enter Password',
          isTextFieldFocused: _passwordFocusNode.hasFocus,
          onTap: () => setState(() => _passwordFocusNode.requestFocus()),
        ),
      ],
    );
  }
...
